fixed bug - disappearing text and z-index

--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -31,6 +31,7 @@ a:visited{color: #008489} */
   font-size: 14px;
   align-items: flex-end;
   padding: 15px 11.5%;
+  z-index: 5;
 }
 
 .navOptions {
